tests/anp_bad_path_test_19/anp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-udp
spec:
  priority: 4
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  egress:
  - name: "allow-to-invalid-cidr"
    action: "Allow"
    to:
    - networks:
      - zc00::/8 # invalid
